syntax = "proto3";

package bgbg.chat;

option java_package = "com.example.bookglebookgleserver.chat";
option java_multiple_files = true;

message ChatMessage {
  int64 groupId = 1;
  int64 senderId = 2;
  string senderName = 3;
  string content = 4;
  int64 timestamp = 5;
  string type = 6; // "NORMAL", "AI_RESPONSE", "DISCUSSION_START", "DISCUSSION_END"
  string aiResponse = 7; // AI 응답(있을 때만)
  repeated string suggestedTopics = 8; // AI가 추천한 토론 주제(있을 때만)
}

service ChatService {
  rpc Chat(stream ChatMessage) returns (stream ChatMessage);
}
